--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # Site navigation links
 
-- title: Portfolio
-  url: /portfolio/
+- title: Photographs
+  url: /photographs/
 
 - title: Writings
   url: /writings/
