--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
 # Site navigation links
 
-- title: Photographs
-  url: /photographs/
+- title: Portfolio
+  url: /portfolio/
 
 - title: Writings
-  url: /
+  url: /writings/
 
 - title: About
   url: /about/
