added second gallery

--- a/_data/gallerylist.yml
+++ b/_data/gallerylist.yml
@@ -18,10 +18,20 @@ gallery01:
     title: "Sunset Studio"
 
 gallery02:
-  - filename: "tozier-06.jpg"
-    title: "image 6"
-  - filename: "tozier-07.jpg"
-    title: "image 7"
+  - filename: "01-Barbara-Tozier-Euphorbia.jpg"
+    title: "Euphorbia"
+  - filename: "02-Barbara-Tozier-Begonia.jpg"
+    title: "Begonia"
     feature: true
-  - filename: "tozier-08.jpg"
-    title: "image 8"
+  - filename: "03-Barbara-Tozier-Mushroom.jpg"
+    title: "Mushroom"
+  - filename: "04-Barbara-Tozier-chartreuse.jpg"
+    title: "Chartreuse"
+  - filename: "05-Barbara-Tozier-Suburbia.jpg"
+    title: "Suburbia"
+  - filename: "06-Barbara-Tozier-Evening.jpg"
+    title: "Evening"
+  - filename: "07-Barbara-Tozier-River.jpg"
+    title: "River"
+  - filename: "08-Barbara-Tozier-Morning.jpg"
+    title: "Morning"
