--- a/_data/gallerylist.yml
+++ b/_data/gallerylist.yml
@@ -54,3 +54,21 @@ gallery03:
     title: "Caramel Wall"
   - filename: "08-Barbara-Tozier-Spirograph.jpg"
     title: "Spirograph"
+
+gallery04:
+  - filename: "01-Barbara-Tozier-Bouquet.jpg"
+    title: "Bouquet"
+  - filename: "02-Barbara-Tozier-Lacy.jpg"
+    title: "Lacy"
+  - filename: "03-Barbara-Tozier-Face-Off.jpg"
+    title: "Face-Off"
+  - filename: "04-Barbara-Tozier-Vases-flowers.jpg"
+    title: "Vases, flowers"
+  - filename: "05-Barbara-Tozier-Garden-Now.jpg"
+    title: "Garden Now!"
+  - filename: "06-Barbara-Tozier-Pears-Still-Life.jpg"
+    title: "Pears Still Life"
+  - filename: "07-Barbara-Tozier-Wizard.jpg"
+    title: "Wizard Ponders His Options"
+  - filename: "08-Barbara-Tozier-Down-with-Brown.jpg"
+    title: "Down with Brown!"
