have a portfolio page!

--- a/_data/gallerylist.yml
+++ b/_data/gallerylist.yml
@@ -1,94 +1,104 @@
 gallery01:
-  - filename: "01-barbara-tozier-tulips.jpg"
-    title: "Tulips"
-    feature: true
-  - filename: "02-barbara-tozier-tunnel.jpg"
-    title: "Tunnel"
-  - filename: "03-barbara-tozier-red-green.jpg"
-    title: "Red Green"
-  - filename: "04-barbara-tozier-vision.jpg"
-    title: "Vision"
-  - filename: "05-barbara-tozier-untitled-(gray).jpg"
-    title: "Untitled (Gray)"
-  - filename: "06-barbara-tozier-grain.jpg"
-    title: "Grain"
-  - filename: "07-barbara-tozier-arrow.jpg"
-    title: "Arrow"
-  - filename: "08-barbara-tozier-sunset-studio.jpg"
-    title: "Sunset Studio"
+  title: "Everyday Abstracts"
+  images:
+    - filename: "01-barbara-tozier-tulips.jpg"
+      title: "Tulips"
+      feature: true
+    - filename: "02-barbara-tozier-tunnel.jpg"
+      title: "Tunnel"
+    - filename: "03-barbara-tozier-red-green.jpg"
+      title: "Red Green"
+    - filename: "04-barbara-tozier-vision.jpg"
+      title: "Vision"
+    - filename: "05-barbara-tozier-untitled-(gray).jpg"
+      title: "Untitled (Gray)"
+    - filename: "06-barbara-tozier-grain.jpg"
+      title: "Grain"
+    - filename: "07-barbara-tozier-arrow.jpg"
+      title: "Arrow"
+    - filename: "08-barbara-tozier-sunset-studio.jpg"
+      title: "Sunset Studio"
 
 gallery02:
-  - filename: "01-barbara-tozier-euphorbia.jpg"
-    title: "Euphorbia"
-  - filename: "02-barbara-tozier-begonia.jpg"
-    title: "Begonia"
-    feature: true
-  - filename: "03-barbara-tozier-mushroom.jpg"
-    title: "Mushroom"
-  - filename: "04-barbara-tozier-chartreuse.jpg"
-    title: "Chartreuse"
-  - filename: "05-barbara-tozier-suburbia.jpg"
-    title: "Suburbia"
-  - filename: "06-barbara-tozier-evening.jpg"
-    title: "Evening"
-  - filename: "07-barbara-tozier-river.jpg"
-    title: "River"
-  - filename: "08-barbara-tozier-morning.jpg"
-    title: "Morning"
+  title: "Natura"
+  images:
+    - filename: "01-barbara-tozier-euphorbia.jpg"
+      title: "Euphorbia"
+    - filename: "02-barbara-tozier-begonia.jpg"
+      title: "Begonia"
+      feature: true
+    - filename: "03-barbara-tozier-mushroom.jpg"
+      title: "Mushroom"
+    - filename: "04-barbara-tozier-chartreuse.jpg"
+      title: "Chartreuse"
+    - filename: "05-barbara-tozier-suburbia.jpg"
+      title: "Suburbia"
+    - filename: "06-barbara-tozier-evening.jpg"
+      title: "Evening"
+    - filename: "07-barbara-tozier-river.jpg"
+      title: "River"
+    - filename: "08-barbara-tozier-morning.jpg"
+      title: "Morning"
 
 gallery03:
-  - filename: "01-barbara-tozier-market-peppers.jpg"
-    title: "Market Peppers"
-    feature: true
-  - filename: "02-barbara-tozier-network.jpg"
-    title: "Network"
-  - filename: "03-barbara-tozier-flash.jpg"
-    title: "Flash!"
-  - filename: "04-barbara-tozier-fern.jpg"
-    title: "Fern"
-  - filename: "05-barbara-tozier-feathery.jpg"
-    title: "Feathery"
-  - filename: "06-barbara-tozier-fracture.jpg"
-    title: "Fracture"
-  - filename: "07-barbara-tozier-caramel-wall.jpg"
-    title: "Caramel Wall"
-  - filename: "08-barbara-tozier-spirograph.jpg"
-    title: "Spirograph"
+  title: "Pattern"
+  images:
+    - filename: "01-barbara-tozier-market-peppers.jpg"
+      title: "Market Peppers"
+      feature: true
+    - filename: "02-barbara-tozier-network.jpg"
+      title: "Network"
+    - filename: "03-barbara-tozier-flash.jpg"
+      title: "Flash!"
+    - filename: "04-barbara-tozier-fern.jpg"
+      title: "Fern"
+    - filename: "05-barbara-tozier-feathery.jpg"
+      title: "Feathery"
+    - filename: "06-barbara-tozier-fracture.jpg"
+      title: "Fracture"
+    - filename: "07-barbara-tozier-caramel-wall.jpg"
+      title: "Caramel Wall"
+    - filename: "08-barbara-tozier-spirograph.jpg"
+      title: "Spirograph"
 
 gallery04:
-  - filename: "01-barbara-tozier-bouquet.jpg"
-    title: "Bouquet"
-  - filename: "02-barbara-tozier-lacy.jpg"
-    title: "Lacy"
-  - filename: "03-barbara-tozier-face-off.jpg"
-    title: "Face-Off"
-    feature: true
-  - filename: "04-barbara-tozier-vases-flowers.jpg"
-    title: "Vases, flowers"
-  - filename: "05-barbara-tozier-garden-now.jpg"
-    title: "Garden Now!"
-  - filename: "06-barbara-tozier-pears-still-life.jpg"
-    title: "Pears Still Life"
-  - filename: "07-barbara-tozier-wizard.jpg"
-    title: "Wizard Ponders His Options"
-  - filename: "08-barbara-tozier-down-with-brown.jpg"
-    title: "Down with Brown!"
+  title: "Still Life"
+  images:
+    - filename: "01-barbara-tozier-bouquet.jpg"
+      title: "Bouquet"
+    - filename: "02-barbara-tozier-lacy.jpg"
+      title: "Lacy"
+    - filename: "03-barbara-tozier-face-off.jpg"
+      title: "Face-Off"
+      feature: true
+    - filename: "04-barbara-tozier-vases-flowers.jpg"
+      title: "Vases, flowers"
+    - filename: "05-barbara-tozier-garden-now.jpg"
+      title: "Garden Now!"
+    - filename: "06-barbara-tozier-pears-still-life.jpg"
+      title: "Pears Still Life"
+    - filename: "07-barbara-tozier-wizard.jpg"
+      title: "Wizard Ponders His Options"
+    - filename: "08-barbara-tozier-down-with-brown.jpg"
+      title: "Down with Brown!"
 
 gallery05:
-  - filename: "01-barbara-tozier-mum.jpg"
-    title: "Mum"
-  - filename: "02-barbara-tozier-gerbera.jpg"
-    title: "Gerbera"
-  - filename: "03-barbara-tozier-evil-viburnum.jpg"
-    title: "Evil Viburnum"
-    feature: true
-  - filename: "04-barbara-tozier-mango.jpg"
-    title: "Mango"
-  - filename: "05-barbara-tozier-dandy.jpg"
-    title: "Dandy"
-  - filename: "06-barbara-tozier-sun-mum.jpg"
-    title: "Sun Mum"
-  - filename: "07-barbara-tozier-lily.jpg"
-    title: "Lily"
-  - filename: "08-barbara-tozier-elemental.jpg"
-    title: "Elemental"
+  title: "Manipulation"
+  images:
+    - filename: "01-barbara-tozier-mum.jpg"
+      title: "Mum"
+    - filename: "02-barbara-tozier-gerbera.jpg"
+      title: "Gerbera"
+    - filename: "03-barbara-tozier-evil-viburnum.jpg"
+      title: "Evil Viburnum"
+      feature: true
+    - filename: "04-barbara-tozier-mango.jpg"
+      title: "Mango"
+    - filename: "05-barbara-tozier-dandy.jpg"
+      title: "Dandy"
+    - filename: "06-barbara-tozier-sun-mum.jpg"
+      title: "Sun Mum"
+    - filename: "07-barbara-tozier-lily.jpg"
+      title: "Lily"
+    - filename: "08-barbara-tozier-elemental.jpg"
+      title: "Elemental"
