--- a/_config.yml
+++ b/_config.yml
@@ -47,8 +47,8 @@ include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "Gemfile", "Gemfile.lock", "LICENSE", "README.md", "notes to myself.txt"]
 
 links:
-  - title: Writings
-    url: /writings/
+  - title: Writing
+    url: /writing/
 
 defaults:
   -
