--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@
 - title: Portfolio
   url: /portfolio/
 
-- title: Writings
-  url: /writings/
+- title: Writing
+  url: /writing/
 
 - title: About
   url: /about/
