--- a/_data/gallerylist.yml
+++ b/_data/gallerylist.yml
@@ -1,4 +1,4 @@
-elemental:
+gallery-elemental:
   title: "West and East"
   images:
     - filename: "01-barbara-tozier-tetrahedron-fire.jpg"
@@ -17,7 +17,7 @@ elemental:
     - filename: "07-barbara-tozier-elementals-3d.jpg"
       title: "West and East (installation)"
 
-stories:
+gallery-stories:
   title: "Stories"
   images:
     - filename: "01-barbara-tozier-science-fiction-poem.jpg"
@@ -30,107 +30,61 @@ stories:
     - filename: "04-barbara-tozier-i-watered-your-flowers.jpg"
       title: "I Watered Your Flowers"
 
-gallery01:
+gallery-abstracts:
   title: "Everyday Abstracts"
   images:
-    - filename: "01-barbara-tozier-tulips.jpg"
-      title: "Tulips"
-    - filename: "02-barbara-tozier-tunnel.jpg"
-      title: "Tunnel"
-    - filename: "03-barbara-tozier-red-green.jpg"
-      title: "Red Green"
-    - filename: "04-barbara-tozier-vision.jpg"
+    - filename: "01-barbara-tozier-vision.jpg"
       title: "Vision"
-      feature: true
-    - filename: "05-barbara-tozier-untitled-(gray).jpg"
+    - filename: "02-barbara-tozier-untitled-(gray).jpg"
       title: "Untitled (Gray)"
-    - filename: "06-barbara-tozier-grain.jpg"
-      title: "Grain"
-    - filename: "07-barbara-tozier-arrow.jpg"
-      title: "Arrow"
-    - filename: "08-barbara-tozier-sunset-studio.jpg"
-      title: "Sunset Studio"
+    - filename: "03-barbara-tozier-face-off.jpg"
+      title: "Face Off"
+    - filename: "04-barbara-tozier-chair-and-wall.jpg"
+      title: "Chair and Wall"
+    - filename: "05-barbara-tozier-red-glass.jpg"
+      title: "Red Glass"
+      feature: true
+    - filename: "06-barbara-tozier-spirograph.jpg"
+      title: "Spirograph"
+    - filename: "07-barbara-tozier-tunnel.jpg"
+      title: "Tunnel"
+    - filename: "08-barbara-tozier-color-study.jpg"
+      title: "Color Study"
 
-gallery02:
+gallery-natura:
   title: "Natura"
   images:
-    - filename: "01-barbara-tozier-euphorbia.jpg"
+    - filename: "01-barbara-tozier-evil-viburnum.jpg"
+      title: "Evil Viburnum"
+    - filename: "02-barbara-tozier-tulpa.jpg"
+      title: "Tulpa"
+    - filename: "03-barbara-tozier-tulips.jpg"
+      title: "Tulips"
+    - filename: "04-barbara-tozier-fern.jpg"
+      title: "Fern"
+    - filename: "05-barbara-tozier-euphorbia.jpg"
       title: "Euphorbia"
-    - filename: "02-barbara-tozier-begonia.jpg"
+    - filename: "06-barbara-tozier-begonia.jpg"
       title: "Begonia"
       feature: true
-    - filename: "03-barbara-tozier-mushroom.jpg"
-      title: "Mushroom"
-    - filename: "04-barbara-tozier-chartreuse.jpg"
-      title: "Chartreuse"
-    - filename: "05-barbara-tozier-suburbia.jpg"
-      title: "Suburbia"
-    - filename: "06-barbara-tozier-evening.jpg"
-      title: "Evening"
-    - filename: "07-barbara-tozier-river.jpg"
-      title: "River"
+    - filename: "07-barbara-tozier-lacy.jpg"
+      title: "Lacy"
     - filename: "08-barbara-tozier-morning.jpg"
       title: "Morning"
+    - filename: "09-barbara-tozier-gerbera.jpg"
+      title: "Gerbera"
 
-gallery03:
+gallery-pattern:
   title: "Pattern"
   images:
     - filename: "01-barbara-tozier-market-peppers.jpg"
       title: "Market Peppers"
-    - filename: "02-barbara-tozier-network.jpg"
-      title: "Network"
-    - filename: "03-barbara-tozier-flash.jpg"
-      title: "Flash!"
-      feature: true
-    - filename: "04-barbara-tozier-fern.jpg"
-      title: "Fern"
-    - filename: "05-barbara-tozier-feathery.jpg"
-      title: "Feathery"
-    - filename: "06-barbara-tozier-fracture.jpg"
-      title: "Fracture"
-    - filename: "07-barbara-tozier-caramel-wall.jpg"
-      title: "Caramel Wall"
-    - filename: "08-barbara-tozier-spirograph.jpg"
-      title: "Spirograph"
-
-gallery04:
-  title: "Still Life"
-  images:
-    - filename: "01-barbara-tozier-bouquet.jpg"
-      title: "Bouquet"
-    - filename: "02-barbara-tozier-lacy.jpg"
-      title: "Lacy"
-    - filename: "03-barbara-tozier-face-off.jpg"
-      title: "Face-Off"
-      feature: true
-    - filename: "04-barbara-tozier-vases-flowers.jpg"
-      title: "Vases, flowers"
-    - filename: "05-barbara-tozier-garden-now.jpg"
-      title: "Garden Now!"
-    - filename: "06-barbara-tozier-pears-still-life.jpg"
-      title: "Pears Still Life"
-    - filename: "07-barbara-tozier-wizard.jpg"
-      title: "Wizard Ponders His Options"
-    - filename: "08-barbara-tozier-down-with-brown.jpg"
-      title: "Down with Brown!"
-
-gallery05:
-  title: "Manipulation"
-  images:
-    - filename: "01-barbara-tozier-mum.jpg"
-      title: "Mum"
-    - filename: "02-barbara-tozier-gerbera.jpg"
-      title: "Gerbera"
-    - filename: "03-barbara-tozier-evil-viburnum.jpg"
-      title: "Evil Viburnum"
-      feature: true
-    - filename: "04-barbara-tozier-mango.jpg"
-      title: "Mango"
+    - filename: "02-barbara-tozier-suburbia.jpg"
+      title: "Suburbia"
+    - filename: "03-barbara-tozier-river.jpg"
+      title: "River"
+    - filename: "04-barbara-tozier-garden-now.jpg"
+      title: "Garden now!"
     - filename: "05-barbara-tozier-dandy.jpg"
       title: "Dandy"
-    - filename: "06-barbara-tozier-sun-mum.jpg"
-      title: "Sun Mum"
-    - filename: "07-barbara-tozier-lily.jpg"
-      title: "Lily"
-    - filename: "08-barbara-tozier-elemental.jpg"
-      title: "Elemental"
+      feature: true
