fixed to relative links instead of absolute

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:    Barbara Tozier Photographer
 locale:   en_US
-# url:      http://barbaratozier.com
+url:      http://barbaratozier.com 
 
 
 # Jekyll configuration
