--- a/.htaccess
+++ b/.htaccess
@@ -28,7 +28,7 @@ SetEnvIfNoCase User-Agent "^asterias" bad_bot
 SetEnvIfNoCase User-Agent "^attach" bad_bot
 SetEnvIfNoCase User-Agent "^BackDoorBot" bad_bot
 SetEnvIfNoCase User-Agent "^BackWeb" bad_bot
-SetEnvIfNoCase User-Agent "Bandit" bad_bottest
+SetEnvIfNoCase User-Agent "Bandit" bad_bot
 SetEnvIfNoCase User-Agent "^Baiduspider" bad_bot
 SetEnvIfNoCase User-Agent "^BatchFTP" bad_bot
 SetEnvIfNoCase User-Agent "^Bigfoot" bad_bot
@@ -122,8 +122,8 @@ SetEnvIfNoCase User-Agent "^lftp" bad_bot
 SetEnvIfNoCase User-Agent "^libWeb/clsHTTP" bad_bot
 SetEnvIfNoCase User-Agent "^likse" bad_bot
 SetEnvIfNoCase User-Agent "^LinkextractorPro" bad_bot
-SetEnvIfNoCase User-Agent "^LinkScan/8.1a.Unix" bad_bo
-SetEnvIfNoCase User-Agent "^LNSpiderguy" bad_bott
+SetEnvIfNoCase User-Agent "^LinkScan/8.1a.Unix" bad_bot
+SetEnvIfNoCase User-Agent "^LNSpiderguy" bad_bot
 SetEnvIfNoCase User-Agent "^LinkWalker" bad_bot
 SetEnvIfNoCase User-Agent "^lwp-trivial" bad_bot
 SetEnvIfNoCase User-Agent "^LWP::Simple" bad_bot
