--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url:      http://barbaratozier.com
 
 permalink:   /:title/
 markdown:    kramdown
-highlighter: pygments
+highlighter: rouge
 sass:
   sass_dir: _sass
   style: compressed
@@ -21,7 +21,7 @@ kramdown:
   footnote_nr: 1
   entity_output: as_char
   toc_levels: 1..6
-  use_coderay: false
+  enable_coderay: false
   # parse_block_html: true
 
 # Site owner
