partial understanding of prewrap issue
Rouge (or perhaps Jekyll) adds the extra div that my CSS doesn’t know
about/talk to

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url:      http://barbaratozier.com
 
 permalink:   /:title/
 markdown:    kramdown
-highlighter: rouge
+highlighter: 
 sass:
   sass_dir: _sass
   style: compressed
