--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ sass:
   style: compressed
 gems:
   - jekyll-sitemap
-incremental: true
+# incremental: true
 
 kramdown:
   auto_ids: true
@@ -33,7 +33,7 @@ owner:
   email: info@barbaratozier.com
   twitter: logista
   google:
-    plus: logista
+    plus:
     analytics:
     verify:
     ad-client:
