updates and new post for last 2 alt-pro

--- a/_data/gallerylist.yml
+++ b/_data/gallerylist.yml
@@ -44,6 +44,10 @@ gallery-altpro:
       title: "Hand"
     - filename: "08-barbara-tozier-deluxe-hotel-redux.jpg"
       title: "Deluxe Hotel Redux"
+    - filename: "09-barbara-tozier-pears.jpg"
+      title: "Pears"
+    - filename: "10-barbara-tozier-calla.jpg"
+      title: "Calla"
 
 gallery-elemental:
   title: "Elemental"
