--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ kramdown:
 owner:
   name: Barbara Tozier
   avatar: website/tozier-avatar.jpg
-  bio: "I'm a photographer who gets up close and personal with *things*."
+  bio: "I'm a a conceptual artist whose medium is photography in all of its forms."
   email: info@barbaratozier.com
   twitter: logista
   google:
