--- a/_config.yml
+++ b/_config.yml
@@ -29,13 +29,15 @@ kramdown:
 # Site owner
 owner:
   name: Barbara Tozier
-  avatar: website/tozier-avatar.jpg
+  avatar: /images/website/tozier-avatar.jpg
   bio: "I'm a a conceptual artist whose medium is photography in all of its forms."
   email: info@barbaratozier.com
   twitter: logista
   github: logista
   tumblr: logista
   instagram: logista
+
+og-image-default: /images/website/tozier-default-thumb.jpg
 
 include: [".htaccess", "_pages"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "Gemfile", "Gemfile.lock", "LICENSE", "README.md", "notes to myself.txt", "posting-guide.md"]
