footer reorganize and style

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ kramdown:
 owner:
   name: Barbara Tozier
   avatar: /images/website/tozier-avatar.jpg
-  bio: "I'm a a conceptual artist whose medium is photography in all of its forms."
+  bio: "I'm a conceptual artist whose medium is photography in all of its forms."
   email: info@barbaratozier.com
   twitter: logista
   github: logista
