colors, fonts and spacing on home page

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site wide configuration
 
-title:    Barbara Tozier Photographer
+title:    Barbara Tozier <br><small class='text-muted'>Photographer</small>
 locale:   en_US
 url:      http://barbaratozier.com
 
