--- a/_config.yml
+++ b/_config.yml
@@ -40,5 +40,11 @@ owner:
 
 og-image-default: /images/website/tozier-default-thumb.jpg
 
+# picture pile maker
+picserizer:
+  sizes: [300,600,900]
+  source: _source_images
+  target: images/posts
+
 include: [".htaccess", "_pages"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "Gemfile", "Gemfile.lock", "LICENSE", "README.md", "notes to myself.txt", "posting-guide.md"]
