tweaks as I find issues in the image related stuff

--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,9 @@ owner:
   tumblr: logista
   instagram: logista
 
+# og-images
+# Supposedly used by social sites, but I don't know for sure. Also used by the home page to populate the post cards.
+og-image-dir: /images/posts/400/ # choose one that is made by the picserizer
 og-image-default: /images/website/tozier-default-thumb.jpg
 
 # picture pile maker
