working away on the standalone pages
there's a lot of junk to get through...

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 # Site navigation links
 
-- title: Portfolio
+- title: Portfolio Galleries
   url: /portfolio/
 
-- title: Writing
+- title: Post archive
   url: /writing/
 
 - title: About
