restructuring gallery organization

--- a/_config.yml
+++ b/_config.yml
@@ -51,3 +51,7 @@ picserizer:
 
 include: [".htaccess", "_pages"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "Gemfile", "Gemfile.lock", "LICENSE", "README.md", "notes to myself.txt", "posting-guide.md", "_orphans"]
+
+collections:
+  galleries:
+    output: true
